crates/sotf-plugins/tests/snapshots/render_plan_snapshots__band_merge__band_merge__desktop_1800.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "band_merge",
  "width": 1800.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "md",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "main"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "merge-config"
  ],
  "overflow_group_ids": [],
  "config_controls": [],
  "main_groups": [
    {
      "id": "merge-config",
      "title": "MERGE CONFIG",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Bands",
          "control_type": "knob",
          "unit": "",
          "range": [
            2.0,
            8.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
