crates/sotf-plugins/tests/snapshots/render_plan_snapshots__band_merge__band_merge__desktop_600.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "band_merge",
  "width": 600.0,
  "orientation": "horizontal",
  "knob_size": "sm",
  "group_direction": "row",
  "slider_height": 120.0,
  "show_visualizations": true,
  "columns_visible": [
    "main"
  ],
  "columns_collapsed": [],
  "config_controls": [],
  "main_groups": [
    {
      "title": "MERGE CONFIG",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Bands",
          "control_type": "knob",
          "unit": "",
          "range": [
            2.0,
            8.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
